tests/snapshots/snapshots__pipeline@param_eff_mismatch.pr.snap
---
source: tests/snapshots.rs
expression: "prism::report(&src)"
input_file: tests/cases/param_eff_mismatch.pr
---
== tokens ==
VOpen Effect UIdent("Emit") LParen Ident("a") RParen VOpen Ctl Ident("emit") LParen Ident("a") RParen Colon KwUnit VClose VSemi Fn Ident("ints") LParen RParen Colon Bang LBrace UIdent("Emit") LParen KwInt RParen RBrace KwUnit Eq Ident("emit") LParen Int(IntLit { value: 1, suffix: None }) RParen VSemi Fn Ident("strs") LParen RParen Colon Bang LBrace UIdent("Emit") LParen KwString RParen RBrace KwUnit Eq Ident("emit") LParen StringLit("x") RParen VSemi Fn Ident("both") LParen RParen Colon Bang LBrace UIdent("Emit") LParen KwInt RParen RBrace KwUnit Eq VOpen Ident("ints") LParen RParen VSemi Ident("strs") LParen RParen VClose VSemi Fn Ident("main") LParen RParen Eq LParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Emit",
            params: [
                "a",
            ],
            ops: [
                EffOp {
                    name: "emit",
                    params: [
                        Var(
                            "a",
                        ),
                    ],
                    ret: Unit,
                    grade: Many,
                },
            ],
            span: 0..35,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "ints",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "Emit",
                        args: [
                            Int,
                        ],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "emit",
                        ),
                        span: 69..73,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 1,
                                    suffix: None,
                                },
                            ),
                            span: 74..75,
                        },
                    ],
                ),
                span: 69..76,
            },
            wheres: [],
            span: 37..76,
        },
        Decl {
            name: "strs",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "Emit",
                        args: [
                            Str,
                        ],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "emit",
                        ),
                        span: 113..117,
                    },
                    [
                        Spanned {
                            node: Str(
                                "x",
                            ),
                            span: 118..121,
                        },
                    ],
                ),
                span: 113..122,
            },
            wheres: [],
            span: 78..122,
        },
        Decl {
            name: "both",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "Emit",
                        args: [
                            Int,
                        ],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Let(
                    "_",
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "ints",
                                ),
                                span: 158..162,
                            },
                            [],
                        ),
                        span: 158..164,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "strs",
                                ),
                                span: 167..171,
                            },
                            [],
                        ),
                        span: 167..173,
                    },
                ),
                span: 158..173,
            },
            wheres: [],
            span: 124..173,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Unit,
                span: 187..189,
            },
            wheres: [],
            span: 175..189,
        },
    ],
}

== types ==
Type Error: in `both`: effect instantiation mismatch: `Emit(String)` is not compatible with `Emit(Int)`
    ╭─[ <source>:10:3 ]
    │
 10 │   strs()
    │   ───┬──  
    │      ╰──── in `both`: effect instantiation mismatch: `Emit(String)` is not compatible with `Emit(Int)`
────╯
